Bug #39435
snapshot object maps can go inconsistent during copyup
% Done:
0%
Source:
Tags:
Backport:
luminous,mimic,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Description
If the data read from the parent is all zeros, deep copyup isn't performed. However snapshot object maps are updated unconditionally, causing inconsistencies where nonexistent objects are marked OBJECT_EXISTS or OBJECT_EXISTS_CLEAN.
Related issues
History
#1 Updated by Ilya Dryomov almost 2 years ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 27724
#2 Updated by Jason Dillaman almost 2 years ago
- Backport set to luminous,mimic,nautilus
#3 Updated by Jason Dillaman almost 2 years ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #39499: nautilus: snapshot object maps can go inconsistent during copyup added
#5 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #39500: luminous: snapshot object maps can go inconsistent during copyup added
#6 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #39501: mimic: snapshot object maps can go inconsistent during copyup added
#7 Updated by Jason Dillaman almost 2 years ago
This backport effort should wait on the backport of 39021
#8 Updated by Nathan Cutler 3 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".