src/librbd/io/CopyupRequest.h
@@ -84,7 +84,6 @@ private:
   Extents m_image_extents;
   ZTracer::Trace m_trace;
 
-  bool m_deep_copy = false;
   bool m_flatten = false;
   bool m_copyup_required = true;
   bool m_copyup_is_zero = true;
